WeatherApp - Do initial api repository

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,10 @@ dependencies {
     // Moshi
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+
+
 }
