--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         compose_ui_version = '1.1.1'
         moshiVersion = "1.13.0"
         retrofitVersion = "2.9.0"
+        daggerVersion = "2.42"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
