--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         moshiVersion = "1.13.0"
         retrofitVersion = "2.9.0"
         daggerVersion = "2.42"
+        lifecycle_version = "2.5.0"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
