--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,21 @@ buildscript {
         retrofitVersion = "2.9.0"
         daggerVersion = "2.42"
         lifecycle_version = "2.5.0"
+        kotlinVersion = "1.6.10"
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
 plugins {
     id 'com.android.application' version '7.3.0-beta05' apply false
     id 'com.android.library' version '7.3.0-beta05' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+}
+
+allprojects {
+    //Support @JvmDefault
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            freeCompilerArgs = ['-Xjvm-default=enable'] //enable or compatibility
+            jvmTarget = "1.8"
+        }
+    }
 }
