--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,8 +79,6 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
     annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
 
-
-/*    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"*/
     // ViewModel
     implementation "androidx.activity:activity-ktx:1.5.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -90,4 +88,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // Lifecycles only (without ViewModel or LiveData)
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
+    //Location
+    implementation "com.google.android.gms:play-services-location:$locationVersion"
 }
