--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,10 @@ dependencies {
 
     implementation "androidx.compose.ui:ui:$composeVersion"
     implementation "androidx.compose.ui:ui-tooling-preview:$composeVersion"
-    implementation "androidx.compose.material:material:$composeVersion"
-    implementation "androidx.compose.runtime:runtime-livedata:$composeVersion"
+    implementation "androidx.compose.material:material:$composeMaterialVersion"
+    implementation "androidx.compose.runtime:runtime-livedata:$composeRuntimeVersion"
+    debugImplementation "androidx.compose.ui:ui-tooling:$composeVersion"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$composeVersion"
 
     testImplementation "junit:junit:$junitVersion"
 
