--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
         coreKtxVersion = "1.9.0"
         androidxActivityVersion = "1.6.1"
         composeVersion = "1.3.1"
+        composeMaterialVersion = "1.3.1"
+        composeRuntimeVersion = "1.3.1"
         androidxNavigationVersion = "2.5.3"
         androidxFragmentVersion = "1.5.4"
         junitVersion = "4.13.2"
