--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,14 @@ buildscript {
         androidxFragmentVersion = "1.5.4"
         junitVersion = "4.13.2"
         okHttpVersion = "4.10.0"
+        hiltVersion = "2.44.2"
     }
 }
 plugins {
     id 'com.android.application' version '7.3.0-rc01' apply false
     id 'com.android.library' version '7.3.0-rc01' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.44.2' apply false
 }
 
 allprojects {
