--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,7 @@ protobuf {
         artifact = "com.google.protobuf:protoc:3.19.4"
     }
 
-    // Generates the java Protobuf-lite code for the Protobufs in this project. See
+    // Generates the java Protobuf-lite code for the Proto`bufs in this project. See
     // https://github.com/google/protobuf-gradle-plugin#customizing-protobuf-compilation
     // for more information.
     generateProtoTasks {
