--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ buildscript {
         androidXHiltVersion = "1.0.0"
         protobufVersion = '3.21.7'
         dataStoreVersion = '1.0.0'
+        firebaseBomVersion = "31.5.0"
+    }
+
+    dependencies {
+        classpath "com.google.gms:google-services:4.3.15"
     }
 }
 plugins {
