--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     ext {
         compose_ui_version = '1.1.1'
-        moshiVersion = "1.13.0"
+        moshiVersion = "1.14.0"
         retrofitVersion = "2.9.0"
         androidxLifecycleVersion = "2.5.1"
-        kotlinVersion = "1.6.10"
+        kotlinVersion = "1.8.20"
         locationVersion = "21.0.1"
         coreKtxVersion = "1.9.0"
         androidxActivityVersion = "1.6.1"
@@ -24,12 +24,13 @@ buildscript {
 
     dependencies {
         classpath "com.google.gms:google-services:4.3.15"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
     }
 }
 plugins {
     id 'com.android.application' version '7.3.0-rc01' apply false
     id 'com.android.library' version '7.3.0-rc01' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'com.google.dagger.hilt.android' version '2.44.2' apply false
 }
 
